[package]
name = "cardano-serialization-lib"
version = "11.5.0"
edition = "2018"
authors = ["EMURGO"]
license = "MIT"
description = "(De)serialization functions for the Cardano blockchain along with related utility functions"
documentation = "https://docs.cardano.org/cardano-components/cardano-serialization-lib"
repository = "https://github.com/Emurgo/cardano-serialization-lib"
readme = "../README.md"
exclude = [
    "pkg/*",
]

[dependencies]
cryptoxide = "0.4.2"
cbor_event = { git = "https://git@github.com/KeystoneHQ/cbor_event.git", tag = "0.0.3" }
ed25519-bip32-core = { version = "0.1.1", default-features = false }
bech32 = { version = "0.9.1", default-features = false }
hex = { version = "0.4.0", default-features = false, features = ["alloc"] }
cfg-if = "1"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.57", default-features = false, features = ["alloc"] }
num-bigint = { version = "0.4.0", default-features = false }
num-integer = { version = "0.1.45", default-features = false }
clear_on_drop = { version = "0.2", features = ["no_cc"] }
rand = { version = "0.8.4", default-features = false }
core2 = { version = "0.3.3", default-features = false, features = ["alloc"] }
sha2 = {version = "^0.9", default-features = false}
digest = {version = "^0.9", default-features = false, features = ["alloc"]}
ritelinked = "0.3.2"
# linked-hash-map = "0.5.3"
# The default can't be compiled to wasm, so it's necessary to use either the 'nightly'
# feature or this one
itertools = {version="0.10.1", default-features = false, features = ["use_alloc"]}

# non-wasm
[target.'cfg(not(all(target_arch = "wasm32", not(target_os = "emscripten"))))'.dependencies]
noop_proc_macro = "0.3.0"

# wasm
[target.'cfg(all(target_arch = "wasm32", not(target_os = "emscripten")))'.dependencies]
# serde-wasm-bindgen = "0.4.5"
wasm-bindgen = "=0.2.87"
rand_os = { version = "0.1", features = ["wasm-bindgen"] }
js-sys = "0.3.51"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[build-dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.57", default-features = false, features = ["alloc"] }

[features]
default = ["alloc"]
alloc = []